Sun Jun 11 09:26:48 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* Makefile.in (clean): Remove t_kdb and t_kdb.o

Fri Jun  9 19:26:49 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Tue May 30 12:31:26 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in: ranlib the library again after doing $(LIBUPDATE).
		Some archivers don't do this.

Fri May 26 17:52:03 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kdb_dbm.c - Change usage of dbm package or Berkeley db package
		based on setting of BERK_DB_DBM.  Also, conditionalize
		implicit knowledge of dbm/Berkeley db filename extensions.
	* Makefile.in - Set BERK_DB_DBM when compiling.  Update from Berkeley
		db build directory.
	* configure.in - Check for random number generators.
	* t_kdb.c - New tester for kdb code.

Fri Mar 24 21:59:34 1995  Theodore Y. Ts'o  <tytso@dcl>

	* store_mkey.c (krb5_db_store_mkey): 
	* fetch_mkey.c (krb5_db_fetch_mkey): Hardcode the size of the
		keytype field in the file format, to be compatible with
		what was used in the Beta 4 release (before we changed the
		size of a krb5_keytype type).

Fri Mar 24 15:13:53 1995    <tytso@rsx-11.mit.edu>

	* kdb_dbm.c: Don't cast dbm_close() to void, because dbm_close is
		already void.

Tue Feb 28 00:30:10 1995  John Gilmore  (gnu at toad.com)

	* decrypt_key.c, encrypt_key.c, fetch_mkey.c, kdb_dbm.c,
	setup_mkey.c, store-mkey.c, verify_mky.c:  Avoid <krb5/...> includes.

Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

    * Added krb5_context to all krb5_routines

Thu Nov 17 19:22:16 1994  Mark Eichin  (eichin@cygnus.com)

	* kdb_dbm.c (krb5_dbm_db_unlock): Use krb5_lock_file.
	(krb5_dbm_db_lock): Same. (Changes from jtkohl@mit.edu.)

Thu Nov 10 17:20:42 1994  Theodore Y. Ts'o  (tytso@dcl)

	* decrypt_key.c (krb5_kdb_decrypt_key): Set the keyblock's magic
		number and ecryption type information appropriately.
