@@ -5,6 +5,6 @@ AC_PROG_ARCHIVE_ADD
 AC_PROG_RANLIB
 AC_PROG_INSTALL
 AC_HAVE_HEADERS(unistd.h)
-AC_HAVE_FUNCS(srand48 srand srandom)
+AC_CHECK_FUNCS(srand48 srand srandom umask)
 AppendRule([all:: libkdb5.a])
 V5_AC_OUTPUT_MAKEFILE
